# MyCodeSnippet

./: .gitignore  CMakeLists.txt  CMakeModule.sh  README.md
3DReconstruction/: RANSAC.cpp
3DReconstruction/MyRANSAC/: Ransac.py  RansacForLine.cpp
C++/chap_06/: CMakeLists.txt  GradeBook.cpp  GradeBook.h  main.cpp  scope.cpp
C++/chap_09/: CMakeLists.txt  CreateAndDestroy.cpp  CreateAndDestroy.h  main_create_and_destroy.cpp
C++/chap_10/: CMakeLists.txt
C++/chap_10/date/: CMakeLists.txt  Date.cpp  Date.h  Employee.cpp  Employee.h  main_date.cpp
C++/chap_10/increment/: CMakeLists.txt  Increment.cpp  Increment.h  main_increment.cpp
C++/chap_10/this/: Time.cpp  Time.h  time_test.cpp
C++/chap_10/time/: CMakeLists.txt  Time.cpp  Time.h  main_time.cpp
C++Primer/chap_07/: CMakeLists.txt  fun_ptr.cpp
C++Primer/chap_08/: CMakeLists.txt  inline.cpp
DesignPattern/LSP/: Gun.h  Soldier.h  main.cpp
PSfM/src/: CameraCluster.cpp  CameraCluster.h
PSfM/src/graclus/: graclus
PSfM/src/graclus/programs/: graclus.c  main.c
SfM/: CMakeLists.txt
SfM/cmake/: FindVlFeat.cmake  SetLibsTargetname.cmake
SfM/ext/: CMakeLists.txt
SfM/ext/vlfeat/: CMakeLists.txt
SfM/ext/vlfeat/vl/: CMakeLists.txt
SfM/src/: CMakeLists.txt  Tools.h  Types.h
SfM/src/feature/: CMakeLists.txt  Feature.cpp  Feature.h  Sift.cpp  Sift.h  sift_test.cpp
SfM/src/geometry/: CMakeLists.txt  Fundamental.cpp  Fundamental.h  Homography.cpp  Homography.h  Ransac.cpp  Ransac.h  RansacHomography.cpp  RansacHomography.h  RansacHomography_test.cpp
SfM/src/geometry/matlab/: vgg_H_from_x_nonlin.m  vgg_conditioner_from_pts.m
SfM/src/graph/: CMakeLists.txt  GraphBase.cpp  GraphBase.h  Graph_test.cpp  UnionFind.cpp  UnionFind.h
SfM/src/image/: CMakeLists.txt  Image.cpp  Image.h  ImageProcess.cpp  ImageProcess.h
SfM/src/math/: CMakeLists.txt  Common.cpp  Common.h
ceres/: CMakeLists.txt
ceres/src/: CMakeLists.txt  bundle_adjuster.cpp  curve_fitting.cpp  helloworld.cpp  helloworld_analytic_diff.cpp  helloworld_numeric_diff.cpp  powell.cpp
cuda/device_query/: device_query.cu  error_handling.cu
cuda/introduction_to_cuda/: readme.md
cuda/prac/: print.cu
cuda/saxpy/: saxpy.cu
dataset/: ajay.txt  apple.txt  david.txt  elephant.txt  et.txt  kermit.txt  test.txt
gtest/: CMakeLists.txt  example.cpp
gtest/cmake/: ConfigGTest.cmake  DownloadGTest.cmake
src/: EGGraph.cpp  EGGraph.h  FeatureManager.cpp  ImageLoader.cpp  ImagePair.cpp  ImagePair.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h  Utility.h  image_path.txt  test.cpp
ui/: index.html
ui/public/css/: home.css  lrtk.css
ui/public/js/: initMap.js  main.js
